tests/type-error/pattern-matching/Overlapping4.vix
type Maybe a = Nothing | Just a

f (Just Nothing) = 1
f (Just Nothing) = 2
f _ = 3
